<resources>
    <string name="app_name"></string>
    <string name="usernameInputHint">Username   </string>
    <string name="pwHint">Password</string>
    <string name="loginButton">Log in</string>
    <string name="logo">Logo</string>
    <string name="forgotPW">Forgot password?</string>
    <string name="signUp">Sign up</string>
    <string name="remMe">Remember me</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="next">Next</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
    <string name="new_password_thirdLayer">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="enter_verification_code_we_sent_to_your_email">Enter verification code we sent to your email</string>
    <string name="add">Add</string>
    <string name="sign_out">Sign out</string>
    <string name="my_products">My products</string>
    <string name="profile">Profile</string>
    <string name="products">Products</string>

</resources>
